--- a/pages/18678.html
+++ b/pages/18678.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      gauge fixing fermion in nLab
+      gauge fixing Lagrangian density in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      gauge fixing fermion
+      gauge fixing Lagrangian density
   </h1>
 
 
@@ -312,169 +312,289 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='quantum_field_theory'>Quantum field theory</h4>
+<h4 id='algebraic_quantum_field_theory'>Algebraic Quantum Field Theory</h4>
 
 <div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/FQFT'>functorial quantum field theory</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/AQFT'>algebraic quantum field theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative</a>, <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>on curved spacetimes</a>, <a class='existingWikiWord' href='/nlab/show/homotopical+algebraic+quantum+field+theory'>homotopical</a>)</p>
 
-<h2 id='contents'>Contents</h2>
+<h2 id='concepts'>Concepts</h2>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cobordism+category'>cobordism category</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cobordism'>cobordism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/extended+cobordism'>extended cobordism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+</ul>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category+of+cobordisms'>(∞,n)-category of cobordisms</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causally+local+net+of+observables'>local net of observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+locality'>causal locality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/bordism+categories+following+Stolz-Teichner'>Riemannian bordism category</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/field+net'>field net</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/conformal+net'>conformal net</a></p>
 </li>
 </ul>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cobordism+hypothesis'>cobordism hypothesis</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>quantum states</a>,</p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/generalized+tangle+hypothesis'>generalized tangle hypothesis</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/On+the+Classification+of+Topological+Field+Theories'>classification of TQFTs</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
 </li>
 </ul>
 </li>
+</ul>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/FQFT'>FQFT</a></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/extended+topological+quantum+field+theory'>extended TQFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>CFT</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/vertex+operator+algebra'>vertex operator algebra</a></li>
-</ul>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/topological+quantum+field+theory'>TQFT</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin–Turaev model</a> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/HQFT'>HQFT</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/TCFT'>TCFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/A-model'>A-model</a>, <a class='existingWikiWord' href='/nlab/show/B-model'>B-model</a>, <a class='existingWikiWord' href='/nlab/show/Gromov-Witten+invariants'>Gromov-Witten theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/mirror+symmetry'>homological mirror symmetry</a></p>
-</li>
-</ul>
-</li>
-</ul>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
 </li>
 </ul>
 </li>
 
 <li>
-<p>FQFT and <a class='existingWikiWord' href='/nlab/show/cohomology'>cohomology</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>S-matrix</a>, <a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitude</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%281%2C1%29-dimensional+Euclidean+field+theories+and+K-theory'>(1,1)-dimensional Euclidean field theories and K-theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+additivity'>causal additivity</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%282%2C1%29-dimensional+Euclidean+field+theory'>(2,1)-dimensional Euclidean field theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a>, <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometric+model+for+elliptic+cohomology'>geometric models for tmf</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a>, <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
 </li>
 </ul>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/holographic+principle+of+higher+category+theory'>holographic principle of higher category theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<h3 id='states_and_observables'>States and observables</h3>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/holographic+principle'>holographic principle</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS/CFT correspondence</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Gleason%27s+theorem'>Gleason&#39;s theorem</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantization+via+the+A-model'>quantization via the A-model</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
 </li>
 </ul>
+
+<h3 id='operator_algebra'>Operator algebra</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/modular+theory'>modular theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stone-von+Neumann+theorem'>Stone-von Neumann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Haag%27s+theorem'>Haag&#39;s theorem</a></p>
 </li>
 </ul>
-<div>
-<p>
-  <a href='/nlab/edit/functorial+quantum+field+theory+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
+
+<h3 id='local_qft'>Local QFT</h3>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Reeh-Schlieder+theorem'>Reeh-Schlieder theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bisognano-Wichmann+theorem'>Bisognano-Wichmann theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/PCT+theorem'>PCT theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spin-statistics+theorem'>spin-statistics theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
+</li>
+</ul>
+
+<h3 id='perturbative_qft'>Perturbative QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
+</ul>
+
+<h3 id='euclidean_qft'>Euclidean QFT</h3>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
+</ul>
 </div>
 </div>
+</div>
 
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> a <em>gauge fixing fermion</em> is an element <math class='maruku-mathml' display='inline' id='mathml_1d7ef034a23b269682302f5768fdc7cd24d212e2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ψ</mi></mrow><annotation encoding='application/x-tex'>\psi</annotation></semantics></math> in a <a class='existingWikiWord' href='/nlab/show/resolution'>resolved</a> <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST complex</a> whose anti-Hamiltonian flow is used to <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorph</a> the complex into one that admits a degreewise <a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a>. This is part of the process of “<a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a>” in <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> a <em>gauge fixing Lagrangian density</em> (traditionally called a “gauge fixing fermion”) is a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_6e17b83cd61830f5fe9c2e9ef9ab02ecaf42c167_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>gf</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{L}_{gf}</annotation></semantics></math> whose <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian function</a> <math class='maruku-mathml' display='inline' id='mathml_6e17b83cd61830f5fe9c2e9ef9ab02ecaf42c167_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>L</mi> <mi>gf</mi></msub></mrow><annotation encoding='application/x-tex'>L_{gf}</annotation></semantics></math> is in degree -1 in a <a class='existingWikiWord' href='/nlab/show/resolution'>resolved</a> <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST complex</a> whose <a class='existingWikiWord' href='/nlab/show/Hamiltonian+flow'>Hamiltonian flow</a> under the <a class='existingWikiWord' href='/nlab/show/local+antibracket'>local antibracket</a> is used to <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorph</a> the complex into one that admits a degreewise <a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a>. This is part of the process of “<a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a>” in <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a>.</p>
 
 <p>This is called a “fermion” only because it has to sit in BV-BRST degree (-1). Besides this odd grading, it has nothing to do with the concept of <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a>. Of course, if the <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a> in question does contain <a class='existingWikiWord' href='/nlab/show/fermion'>fermion fields</a>, then the “gauge fixing fermion” may depend on these.</p>
 
-<p>For details see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>A first idea of quantum field theory</a></em> the section <em><a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#GaugeFixing'>gauge fixing</a></em>.</p>
+<h2 id='details'>Details</h2>
+
+<p>For details see at <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>A first idea of quantum field theory</a></em> the chapter <em><a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#GaugeFixing'>Gauge fixing</a></em>.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/BV-Lagrangian+density'>BV-Lagrangian density</a></p>
+</li>
+</ul>
 
 <p>
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Created on October 12, 2017 16:53:15 
+  Revised on December 14, 2017 12:42:18 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (185.46.137.15)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gauge+fixing+fermion" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/gauge+fixing+Lagrangian+density" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+fixing+Lagrangian+density/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/gauge+fixing+Lagrangian+density" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+fixing+Lagrangian+density" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/gauge+fixing+fermion" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/gauge+fixing+Lagrangian+density" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/gauge+fixing+fermion" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/gauge+fixing+Lagrangian+density" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/gauge+fixing+fermion" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/gauge+fixing+Lagrangian+density" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
