--- a/pages/18847.html
+++ b/pages/18847.html
@@ -308,8 +308,12 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> the plain <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{L}</annotation></semantics></math> of a given <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> is accompanied by an auxiliary Lagrangian density <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{L}_{BRST}</annotation></semantics></math> depending on <a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a> such as <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost fields</a> and <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a>, such that the <a class='existingWikiWord' href='/nlab/show/local+antibracket'>local antibracket</a> with the sum <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>-\mathbf{L} + \mathbf{L}_{BRST}</annotation></semantics></math> yields the <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST differential</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo>{</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mo>−</mo><mo>}</mo></mrow></mrow><annotation encoding='application/x-tex'>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST formalism</a> the plain <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> <math class='maruku-mathml' display='inline' id='mathml_55ae6c40e6409dde9d7baa8f6a8657a9f6af910e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle></mrow><annotation encoding='application/x-tex'>\mathbf{L}</annotation></semantics></math> of a given <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> is accompanied by an auxiliary Lagrangian density <math class='maruku-mathml' display='inline' id='mathml_55ae6c40e6409dde9d7baa8f6a8657a9f6af910e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{L}_{BRST}</annotation></semantics></math> depending on <a class='existingWikiWord' href='/nlab/show/auxiliary+field'>auxiliary fields</a> such as <a class='existingWikiWord' href='/nlab/show/ghost+field'>ghost fields</a> and <a class='existingWikiWord' href='/nlab/show/antifield'>antifields</a>, such that the <a class='existingWikiWord' href='/nlab/show/local+antibracket'>local antibracket</a> with the sum <math class='maruku-mathml' display='inline' id='mathml_55ae6c40e6409dde9d7baa8f6a8657a9f6af910e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>-\mathbf{L} + \mathbf{L}_{BRST}</annotation></semantics></math> yields the <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV-BRST differential</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_55ae6c40e6409dde9d7baa8f6a8657a9f6af910e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo>{</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>+</mo><msub><mstyle mathvariant='bold'><mi>L</mi></mstyle> <mi>BRST</mi></msub><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thinmathspace'></mspace><mo>−</mo><mo>}</mo></mrow></mrow><annotation encoding='application/x-tex'>
   s
   \;=\;
   \left\{
@@ -320,21 +324,27 @@ margin-left: 0em;
   \right\}
 
 </annotation></semantics></math></div>
-<p>which models the <a class='existingWikiWord' href='/nlab/show/derived+critical+locus'>derived critical locus</a> <math class='maruku-mathml' display='inline' id='mathml_2fbb21ef514e68be78bd2261680c67090881fbea_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>≃</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\delta_{EL}\mathbf{L} \simeq 0</annotation></semantics></math> inside the <a class='existingWikiWord' href='/nlab/show/homotopy+quotient'>homotopy quotient</a> modeled by the <a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a> of the theory.</p>
+<p>which models the <a class='existingWikiWord' href='/nlab/show/derived+critical+locus'>derived critical locus</a> <math class='maruku-mathml' display='inline' id='mathml_55ae6c40e6409dde9d7baa8f6a8657a9f6af910e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>≃</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>\delta_{EL}\mathbf{L} \simeq 0</annotation></semantics></math> inside the <a class='existingWikiWord' href='/nlab/show/homotopy+quotient'>homotopy quotient</a> modeled by the <a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a> of the theory.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/gauge+fixing+Lagrangian+density'>gauge fixing Lagrangian density</a></li>
+</ul>
 
 <p>
 </p>
 </div>
 
 <div class="revisedby">
-  Created on December 14, 2017 10:24:57 
+  Revised on December 14, 2017 12:43:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (185.46.137.15)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/BV-Lagrangian+density" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/BV-Lagrangian+density" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BV-Lagrangian+density/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/BV-Lagrangian+density" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BV-Lagrangian+density" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
